added sfml build task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,13 @@
                 "cd sdl3;",
                 "cmake -S . -B build;",
                 "cmake --build build"
+            ]            
+        },
+        {
+            "label": "Build SFML",
+            "type": "shell",
+            "command": [
+                "./sfml3/build.sh"
             ]
         }
     ]
