added callback lambda as logger class member

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,11 +17,12 @@
                 "clangd.arguments": [
                     "-background-index",
                     "-compile-commands-dir=sfml3/build"
-                ]
+                ],
+                "C_Cpp.intelliSenseEngine": "disabled"
             }
         }
     },
     "remoteUser": "user",
-    "containerUser": "user",
+    "containerUser": "user"
     
 }
