--- a/sfml3/src/tilemap_test/CMakeLists.txt
+++ b/sfml3/src/tilemap_test/CMakeLists.txt
@@ -1,5 +1,5 @@
-set(TARGET sprite_test)
-add_executable(${TARGET} ${CMAKE_SOURCE_DIR}/src/${TARGET}/${TARGET}.cpp)
+set(TARGET tilemap_test)
+add_executable(${TARGET} ${CMAKE_SOURCE_DIR}/src/${TARGET}/main.cpp)
 target_compile_features(${TARGET} PRIVATE cxx_std_17)
 target_link_libraries(${TARGET} PRIVATE 
     SFML::Graphics 
@@ -7,6 +7,7 @@ target_link_libraries(${TARGET} PRIVATE
 )
 target_include_directories(${TARGET} SYSTEM PRIVATE 
     ${PROJECT_SOURCE_DIR}/src/logging
+    ${CMAKE_SOURCE_DIR}/src/${TARGET}/inc
     ${PROJECT_SOURCE_DIR}/src/examples/include
 )
 
