--- a/sfml3/src/celestial_bodies/CMakeLists.txt
+++ b/sfml3/src/celestial_bodies/CMakeLists.txt
@@ -1,13 +1,18 @@
-set(TARGET sprite_test)
-add_executable(${TARGET} ${CMAKE_SOURCE_DIR}/src/${TARGET}/${TARGET}.cpp)
+set(TARGET celestial_bodies)
+
+
+add_executable(${TARGET} ${CMAKE_SOURCE_DIR}/src/${TARGET}/main.cpp)
 target_compile_features(${TARGET} PRIVATE cxx_std_17)
 target_link_libraries(${TARGET} PRIVATE 
     SFML::Graphics 
+    SFML::Window
+    SFML::Main
     spdlog::spdlog
+    
 )
 target_include_directories(${TARGET} SYSTEM PRIVATE 
+    ${PROJECT_SOURCE_DIR}/src/${TARGET}/inc
     ${PROJECT_SOURCE_DIR}/src/logging
-    ${PROJECT_SOURCE_DIR}/src/examples/include
+    /usr/x86_64-w64-mingw32/include/GL/
 )
 
-file(COPY ${CMAKE_SOURCE_DIR}/src/${TARGET}/resources DESTINATION ${CMAKE_BINARY_DIR}/bin )
